--- a/src/styles.css
+++ b/src/styles.css
@@ -5,18 +5,31 @@ body {
   height: 100%;
   color: lightslategray;
 }
+.current {
+  display: block;
+  text-align: left;
+}
+#current-day-time {
+  display: block;
+  text-align: left;
+  font-size: 18px;
+}
+#current-day {
+  font-size: 20px;
+}
 hr {
   margin: auto;
   width: 85%;
   color: burlywood;
 }
 .container {
-  margin-top: 120px;
+  margin-top: 20px;
+  width: 85%;
 }
 .weather-app {
   border-style: none;
   border-radius: 30px 0px;
-  margin: auto;
+  margin: 120px auto;
   padding-bottom: 40px;
   max-width: 75%;
   max-height: 95%;
@@ -31,7 +44,6 @@ hr {
 h1,
 .city {
   color: burlywood;
-  margin: 20px;
   font-size: 60px;
   font-weight: 500;
 }
@@ -59,31 +71,22 @@ p {
 .btn-primary:hover {
   background: salmon;
 }
-.grid-container {
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-  grid-gap: 20px;
-  max-width: 80%;
-  margin: 0 auto;
-}
-.current {
-  border-style: none;
-  border-color: burlywood;
-  border-radius: 20px 0px;
-  padding-top: 10px;
-  text-align: center;
+#current-weather {
+  font-size: 30px;
+  position: relative;
+  top: -20px;
+  text-decoration-line: underline;
+  text-decoration-thickness: 1px;
+  text-underline-position: under;
 }
 .currentWeatherEmoji {
   position: relative;
-  top: -10px;
-  font-size: 60px;
+  top: -13px;
 }
-.add {
-  position: relative;
-  top: -20px;
-}
+
 #current-temp {
-  font-size: 40px;
+  right: 10px;
+  font-size: 50px;
   font-weight: 900;
 }
 #tempc {
@@ -111,4 +114,7 @@ p {
   border-radius: 5px;
   border-style: dashed;
   border-color: burlywood;
+}
+.github-icon {
+  width: 13px;
 }
