--- a/src/styles.css
+++ b/src/styles.css
@@ -178,3 +178,27 @@ div.row {
 div.weather-forecast {
   text-align: center;
 }
+
+#city-image {
+  height: fit-content;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 0px 30px;
+  opacity: 80%;
+  padding: 0px;
+}
+#city-image-overlay {
+  position: relative;
+  top: 20px;
+  border-radius: 0px 30px;
+  background-color: #f8a100;
+}
+span#country-city {
+  text-align: right;
+  color: lemonchiffon;
+  font-size: 20px;
+  position: relative;
+  top: -10px;
+  left: -10px;
+  float: right;
+}
