--- a/src/styles.css
+++ b/src/styles.css
@@ -64,9 +64,17 @@ body {
 }
 h1,
 .city {
+  font-family: Roboto, sans-serif;
   color: burlywood;
-  font-size: 50px;
-  font-weight: 500;
+  font-size: 32px;
+  font-weight: 100;
+  margin-top: 1rem;
+  transform: scale(1, 1.3);
+}
+
+.city {
+  font-weight: 300;
+  text-transform: uppercase;
 }
 
 .form {
