--- a/src/styles.css
+++ b/src/styles.css
@@ -66,10 +66,11 @@ h1,
 .city {
   font-family: Roboto, sans-serif;
   color: burlywood;
-  font-size: 32px;
+  font-size: 30px;
   font-weight: 100;
-  margin-top: 1rem;
-  transform: scale(1, 1.3);
+  margin-top: 1.5rem;
+  transform: scale(1, 1.4);
+  letter-spacing: 2px;
 }
 
 .city {
